--- a/package.json
+++ b/package.json
@@ -4,16 +4,19 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
-    "babel": "^6.23.0",
-    "gsap": "^3.5.1",
+    "core-js": "^3.6.5",
     "jquery": "^3.5.1",
     "prettier": "^2.1.1",
     "scrollmagic": "^2.0.7"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "parcel-bundler": "^1.12.4"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "format": "prettier --write \"**/*.+(js|md|css|scss|json)\""
+    "format": "prettier --write \"**/*.+(js|md|css|scss|json)\"",
+    "start": "parcel index.html",
+    "build": "parcel build index.html"
   },
   "repository": {
     "type": "git",
