--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "format": "prettier --write \"**/*.+(js|md|css|scss|json)\"",
-    "start": "parcel index.html",
-    "build": "parcel build index.html"
+    "start": "parcel index.html --out-dir docs/ --public-url ./",
+    "build": "parcel build index.html --out-dir docs/ --public-url ./"
   },
   "repository": {
     "type": "git",
