--- a/package.json
+++ b/package.json
@@ -9,9 +9,7 @@
     "prettier": "^2.1.1",
     "scrollmagic": "^2.0.7"
   },
-  "devDependencies": {
-    "parcel-bundler": "^1.12.4"
-  },
+  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "format": "prettier --write \"**/*.+(js|md|css|scss|json)\"",
