--- a/package.json
+++ b/package.json
@@ -7,12 +7,17 @@
     "core-js": "^3.6.5",
     "jquery": "^3.5.1",
     "prettier": "^2.1.1",
-    "scrollmagic": "^2.0.7"
+    "scrollmagic": "^2.0.7",
+    "svgxuse": "^1.2.6"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "parcel": "^1.12.4"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "format": "prettier --write \"**/*.+(js|md|css|scss|json)\""
+    "format": "prettier --write \"**/*.+(js|md|css|scss|json)\"",
+    "start": "parcel index.html",
+    "build": "parcel build index.html --out-dir docs/"
   },
   "repository": {
     "type": "git",
