--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "format": "prettier --write \"**/*.+(js|md|css|scss|json)\"",
     "start": "parcel index.html",
-    "build": "parcel build index.html --out-dir docs/"
+    "build": "parcel build index.html --out-dir docs/ --public-url ./"
   },
   "repository": {
     "type": "git",
